# models-from-huggingface-to-s3

./: .gitignore  README.md  loading_model.py  pyproject.toml
